@@ -1,6 +1,7 @@
 package JavaStreamAPI.String;
 
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -10,13 +11,9 @@ public class CountCharacters {
     public static void main(String[] args) {
         List<String> words = List.of("Apple", "Banana", "Avocado", "Cherry", "Apricot", "Blueberry");
 
-        List<Long> result = words.stream()
-                .map(String::toLowerCase)
-                .map(s-> s.chars()
-                        .mapToObj(c -> String.valueOf((char) c))
-                        .count())
-                .collect(Collectors.toList());
+        List<Long> result = words.stream().map(s-> s.chars().count()).toList();
 
         System.out.println(result);
+
     }
 }
